<?xml version="1.0"?>
<package format="2">
  <name>servo_controller</name>
  <version>0.1.0</version>
  <description>Servo controller package with ROS Noetic and Arduino integration.</description>
  <maintainer email="you@example.com">Treggon Owens</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rosserial_arduino</exec_depend>
</package>
